--- a/index.html
+++ b/index.html
@@ -4,20 +4,81 @@
 <meta charset="UTF-8">
 <title>DOSRMLOP</title>
 <style>
-body { text-align: center; background: #111; color: #fff; font-family: Arial; padding: 20px; }
-button { padding: 10px 20px; margin: 10px; font-size: 16px; cursor: pointer; }
-video { max-width: 90%; margin-top: 20px; }
+body {
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(135deg, #1e1e2f, #4b0082);
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+.container {
+  background: rgba(0,0,0,0.7);
+  padding: 30px;
+  border-radius: 20px;
+  text-align: center;
+}
+h1 { font-size: 2.5em; margin-bottom: 10px; color: #ff6ec7; text-shadow: 2px 2px 8px #000; }
+p { font-size: 1.2em; margin-bottom: 20px; color: #ddd; }
+button {
+  background: linear-gradient(135deg, #ff6ec7, #845ec2);
+  border: none; border-radius: 50px;
+  padding: 15px 30px; font-size: 1.1em;
+  color: #fff; cursor: pointer; transition: all 0.3s;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
+button:hover { transform: translateY(-3px); box-shadow: 0 8px 20px rgba(0,0,0,0.5); }
+video { max-width: 90%; margin-top: 20px; border-radius: 15px; box-shadow: 0 5px 20px rgba(0,0,0,0.5); display: none; }
+img { max-width: 60%; margin-top: 20px; border-radius: 15px; }
 </style>
 </head>
 <body>
 
-<h1>DOSRMLOP</h1>
-<p>Safe FOMM-style AI animation</p>
-<button onclick="document.getElementById('anim').style.display='block'">Start Animation</button>
+<div class="container">
+  <h1>DOSRMLOP</h1>
+  <p>Safe FOMM-style AI animation</p>
 
-<video id="anim" style="display:none;" controls autoplay>
-  <source src="https://drive.google.com/uc?export=download&id=1dUsT1jeRFd3l5jKgwYg_X5IqfmlcEnM7" type="video/mp4">
-</video>
+  <!-- Upload Image -->
+  <input type="file" id="imgUpload" accept="image/*">
+  <br>
+  <img id="preview" src="" style="display:none;">
+  <br>
+  <button id="startBtn">Start Animation</button>
+
+  <!-- Video -->
+  <video id="anim" controls autoplay>
+    <source src="https://drive.google.com/uc?export=download&id=1dUsT1jeRFd3l5jKgwYg_X5IqfmlcEnM7" type="video/mp4">
+  </video>
+</div>
+
+<script>
+// Preview uploaded image
+const imgUpload = document.getElementById('imgUpload');
+const preview = document.getElementById('preview');
+const video = document.getElementById('anim');
+const startBtn = document.getElementById('startBtn');
+
+imgUpload.addEventListener('change', function(){
+  const file = this.files[0];
+  if(file){
+    preview.src = URL.createObjectURL(file);
+    preview.style.display = 'block';
+    video.style.display = 'none';
+  }
+});
+
+// Show video when Start Animation clicked
+startBtn.addEventListener('click', function(){
+  if(preview.src){
+    preview.style.display = 'none';
+    video.style.display = 'block';
+  } else {
+    alert('Please upload an image first!');
+  }
+});
+</script>
 
 </body>
 </html>
