--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@ video { max-width: 90%; margin-top: 20px; border-radius: 15px; display: none; bo
   <div id="processing">Processing AI animation...</div>
   <p id="message"></p>
 
-  <!-- Video -->
+  <!-- Video (local MP4) -->
   <video id="anim" controls>
-    <source src="https://drive.google.com/uc?export=download&id=1dUsT1jeRFd3l5jKgwYg_X5IqfmlcEnM7" type="video/mp4">
+    <source src="video.mp4" type="video/mp4">
   </video>
 </div>
 
