--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>DOSRMLOP</title>
+<title>DOSRMLOP Fake Deepfake</title>
 <style>
-/* Body & background */
 body {
   margin: 0;
   font-family: 'Segoe UI', sans-serif;
@@ -16,20 +15,18 @@ body {
   min-height: 100vh;
 }
 
-/* Card container */
 .container {
   background: rgba(0,0,0,0.7);
   padding: 30px;
   border-radius: 20px;
   text-align: center;
   box-shadow: 0 5px 20px rgba(0,0,0,0.5);
+  position: relative;
 }
 
-/* Title & subtitle */
 h1 { font-size: 2.5em; color: #ff6ec7; text-shadow: 2px 2px 8px #000; margin-bottom: 10px; }
 p { font-size: 1.2em; margin-bottom: 20px; color: #ddd; }
 
-/* Upload input */
 input[type="file"] {
   margin: 10px 0;
   padding: 5px;
@@ -37,7 +34,6 @@ input[type="file"] {
   cursor: pointer;
 }
 
-/* Button */
 button {
   background: linear-gradient(135deg, #ff6ec7, #845ec2);
   border: none;
@@ -51,17 +47,24 @@ button {
 }
 button:hover { transform: translateY(-3px); box-shadow: 0 8px 20px rgba(0,0,0,0.5); }
 
-/* Image preview */
-img { max-width: 60%; margin-top: 20px; border-radius: 15px; display: none; }
+#preview {
+  max-width: 200px;
+  max-height: 200px;
+  border-radius: 15px;
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  z-index: 2;
+  opacity: 0.8;
+}
 
-/* Video */
-video { max-width: 90%; margin-top: 20px; border-radius: 15px; display: none; box-shadow: 0 5px 20px rgba(0,0,0,0.5); }
-
-/* Processing animation */
 #processing {
   display: none;
   margin-top: 20px;
-  font-size: 1.1em;
+  font-size: 1.2em;
   color: #ff6ec7;
   animation: blink 1s infinite;
 }
@@ -71,11 +74,17 @@ video { max-width: 90%; margin-top: 20px; border-radius: 15px; display: none; bo
   25%, 75% { opacity: 0; }
 }
 
-/* Inline message */
 #message {
   margin-top: 15px;
   color: #ff6ec7;
   font-weight: bold;
+}
+
+video {
+  max-width: 90%;
+  border-radius: 15px;
+  display: none;
+  box-shadow: 0 5px 20px rgba(0,0,0,0.5);
 }
 </style>
 </head>
@@ -85,24 +94,19 @@ video { max-width: 90%; margin-top: 20px; border-radius: 15px; display: none; bo
   <h1>DOSRMLOP</h1>
   <p>Safe FOMM-style AI animation</p>
 
-  <!-- Upload Image -->
   <input type="file" id="imgUpload" accept="image/*"><br>
-  <img id="preview">
-  <br>
   <button id="startBtn">Start Animation</button>
 
-  <!-- Processing message -->
   <div id="processing">Processing AI animation...</div>
   <p id="message"></p>
 
-  <!-- Video (local MP4) -->
   <video id="anim" controls>
     <source src="video.mp4" type="video/mp4">
   </video>
+  <img id="preview">
 </div>
 
 <script>
-// Elements
 const imgUpload = document.getElementById('imgUpload');
 const preview = document.getElementById('preview');
 const video = document.getElementById('anim');
@@ -110,11 +114,14 @@ const startBtn = document.getElementById('startBtn');
 const processing = document.getElementById('processing');
 const message = document.getElementById('message');
 
-// Preview uploaded image
+let uploadedImage = null;
+
+// Show uploaded image preview
 imgUpload.addEventListener('change', function(){
   const file = this.files[0];
   if(file){
-    preview.src = URL.createObjectURL(file);
+    uploadedImage = URL.createObjectURL(file);
+    preview.src = uploadedImage;
     preview.style.display = 'block';
     video.style.display = 'none';
     processing.style.display = 'none';
@@ -122,24 +129,27 @@ imgUpload.addEventListener('change', function(){
   }
 });
 
-// Start animation
+// Start fake deepfake animation
 startBtn.addEventListener('click', function(){
-  if(preview.src){
-    preview.style.display = 'none';
-    processing.style.display = 'block';
-    message.textContent = '';
-
-    // Fake AI processing delay
-    setTimeout(() => {
-      processing.style.display = 'none';
-      video.style.display = 'block';
-      video.play().catch(() => {
-        message.textContent = "Tap the video to play if autoplay is blocked on your device.";
-      });
-    }, 3000); // 3 seconds fake processing
-  } else {
+  if(!uploadedImage){
     message.textContent = 'Please upload an image first!';
+    return;
   }
+
+  preview.style.display = 'block';
+  processing.style.display = 'block';
+  message.textContent = '';
+  video.style.display = 'none';
+
+  // Fake processing delay
+  setTimeout(() => {
+    processing.style.display = 'none';
+    video.style.display = 'block';
+    preview.style.display = 'block'; // overlay image
+    video.play().catch(() => {
+      message.textContent = "Tap the video to play if autoplay is blocked on your device.";
+    });
+  }, 3000); // 3 seconds processing
 });
 </script>
 
