--- a/index.html
+++ b/index.html
@@ -1,46 +1,168 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>DOSRMLOP</title>
+<title>DOSRMLOP Deepfake</title>
 <style>
 body {
-  text-align: center;
-  background: #111;
+  margin: 0;
+  font-family: 'Segoe UI', sans-serif;
+  background: linear-gradient(135deg, #1e1e2f, #4b0082);
   color: #fff;
-  font-family: Arial, sans-serif;
-  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.container {
+  background: rgba(0,0,0,0.8);
+  padding: 30px;
+  border-radius: 20px;
+  text-align: center;
+  box-shadow: 0 5px 20px rgba(0,0,0,0.5);
+  max-width: 500px;
+  width: 90%;
+  position: relative;
+}
+
+h1 { font-size: 2.5em; color: #ff6ec7; text-shadow: 2px 2px 8px #000; margin-bottom: 10px; }
+p { font-size: 1.2em; margin-bottom: 20px; color: #ddd; }
+
+input[type="file"] {
+  margin: 10px 0;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 80%;
 }
 
 button {
-  padding: 10px 20px;
-  margin: 10px;
-  font-size: 16px;
-  cursor: pointer;
   background: linear-gradient(135deg, #ff6ec7, #845ec2);
   border: none;
-  border-radius: 10px;
+  border-radius: 50px;
+  padding: 15px 35px;
+  font-size: 1.2em;
   color: #fff;
+  cursor: pointer;
+  margin-top: 15px;
+  transition: all 0.3s ease;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+}
+button:hover { transform: translateY(-3px); box-shadow: 0 8px 20px rgba(0,0,0,0.5); }
+
+#processing {
+  display: none;
+  margin-top: 20px;
+  font-size: 1.2em;
+  color: #ff6ec7;
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  0%, 50%, 100% { opacity: 1; }
+  25%, 75% { opacity: 0; }
+}
+
+#progress-bar {
+  width: 100%;
+  background-color: rgba(255,255,255,0.2);
+  border-radius: 10px;
+  margin-top: 20px;
+  display: none;
+}
+
+#progress {
+  height: 15px;
+  width: 0%;
+  background: #ff6ec7;
+  border-radius: 10px;
+}
+
+#message {
+  margin-top: 15px;
+  color: #ff6ec7;
+  font-weight: bold;
 }
 
 video {
-  max-width: 90%;
+  max-width: 100%;
   margin-top: 20px;
-  border-radius: 10px;
+  border-radius: 15px;
+  display: none;
+}
+
+#watermark {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  font-size: 14px;
+  color: #ff6ec7;
+  opacity: 0.7;
 }
 </style>
 </head>
 <body>
 
-<h1>DOSRMLOP</h1>
-<p>Safe FOMM-style AI animation</p>
+<div class="container">
+  <h1>DOSRMLOP</h1>
+  <p>Safe FOMM-style AI animation</p>
 
-<button onclick="document.getElementById('anim').style.display='block'">Start Animation</button>
+  <input type="file" id="imgUpload" accept="image/*"><br>
+  <input type="file" id="audioUpload" accept="audio/*"><br>
 
-<video id="anim" style="display:none;" controls autoplay>
-  <source src="https://raw.githubusercontent.com/domlopsrlop-cmd/dosrmlop-web/main/video.mp4" type="video/mp4">
-  Your browser does not support the video tag.
-</video>
+  <button id="startBtn">Generate Animation</button>
+
+  <div id="processing">Generating animation...</div>
+  <div id="progress-bar"><div id="progress"></div></div>
+  <p id="message"></p>
+
+  <video id="anim" controls>
+    <source src="https://raw.githubusercontent.com/domlopsrlop-cmd/dosrmlop-web/main/video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
+  <div id="watermark">DOSRMLOP.AI</div>
+</div>
+
+<script>
+const imgUpload = document.getElementById('imgUpload');
+const audioUpload = document.getElementById('audioUpload');
+const startBtn = document.getElementById('startBtn');
+const processing = document.getElementById('processing');
+const progressBar = document.getElementById('progress-bar');
+const progress = document.getElementById('progress');
+const video = document.getElementById('anim');
+const message = document.getElementById('message');
+
+startBtn.addEventListener('click', () => {
+  if (!imgUpload.files[0]) {
+    message.textContent = "Please upload an image first!";
+    return;
+  }
+
+  processing.style.display = 'block';
+  progressBar.style.display = 'block';
+  progress.style.width = '0%';
+  message.textContent = '';
+  video.style.display = 'none';
+
+  let width = 0;
+  const interval = setInterval(() => {
+    width += 2; // fake progress
+    progress.style.width = width + '%';
+    if (width >= 100) {
+      clearInterval(interval);
+      processing.style.display = 'none';
+      progressBar.style.display = 'none';
+      video.style.display = 'block';
+      video.play().catch(() => {
+        message.textContent = "Tap video to play if autoplay is blocked.";
+      });
+    }
+  }, 50);
+});
+</script>
 
 </body>
 </html>
