--- a/index.html
+++ b/index.html
@@ -16,40 +16,48 @@ body {
 }
 
 .container {
-  background: rgba(0,0,0,0.8);
+  background: rgba(0,0,0,0.85);
   padding: 30px;
   border-radius: 20px;
   text-align: center;
   box-shadow: 0 5px 20px rgba(0,0,0,0.5);
-  max-width: 500px;
+  max-width: 480px;
   width: 90%;
   position: relative;
 }
 
-h1 { font-size: 2.5em; color: #ff6ec7; text-shadow: 2px 2px 8px #000; margin-bottom: 10px; }
-p { font-size: 1.2em; margin-bottom: 20px; color: #ddd; }
+h1 {
+  font-size: 2.3em;
+  font-weight: bold;
+  background: linear-gradient(135deg, #ff6ec7, #845ec2);
+  -webkit-background-clip: text;
+  color: transparent;
+  text-shadow: 0 0 10px rgba(255,255,255,0.2);
+}
+
+p { color: #ccc; margin-bottom: 25px; }
 
 input[type="file"] {
   margin: 10px 0;
-  padding: 5px;
-  border-radius: 10px;
-  cursor: pointer;
-  width: 80%;
+  padding: 12px;
+  border-radius: 12px;
+  width: 100%;
+  background: #222;
+  color: #fff;
+  border: 1px solid #444;
 }
 
 button {
   background: linear-gradient(135deg, #ff6ec7, #845ec2);
   border: none;
   border-radius: 50px;
-  padding: 15px 35px;
+  padding: 15px 25px;
   font-size: 1.2em;
   color: #fff;
+  width: 100%;
   cursor: pointer;
   margin-top: 15px;
-  transition: all 0.3s ease;
-  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
 }
-button:hover { transform: translateY(-3px); box-shadow: 0 8px 20px rgba(0,0,0,0.5); }
 
 #processing {
   display: none;
@@ -64,104 +72,90 @@ button:hover { transform: translateY(-3px); box-shadow: 0 8px 20px rgba(0,0,0,0.
   25%, 75% { opacity: 0; }
 }
 
-#progress-bar {
+#progressbar {
   width: 100%;
-  background-color: rgba(255,255,255,0.2);
+  background: rgba(255,255,255,0.2);
+  height: 15px;
   border-radius: 10px;
   margin-top: 20px;
   display: none;
 }
 
-#progress {
-  height: 15px;
+#bar {
+  height: 100%;
   width: 0%;
   background: #ff6ec7;
   border-radius: 10px;
 }
 
-#message {
-  margin-top: 15px;
-  color: #ff6ec7;
-  font-weight: bold;
-}
-
 video {
-  max-width: 100%;
+  display: none;
+  width: 100%;
   margin-top: 20px;
   border-radius: 15px;
-  display: none;
 }
 
 #watermark {
   position: absolute;
-  bottom: 10px;
   right: 10px;
-  font-size: 14px;
+  bottom: 10px;
   color: #ff6ec7;
   opacity: 0.7;
+  font-size: 14px;
 }
 </style>
 </head>
 <body>
 
 <div class="container">
+
   <h1>DOSRMLOP</h1>
-  <p>Safe FOMM-style AI animation</p>
+  <p>Safe FOMM-style AI Animation</p>
 
-  <input type="file" id="imgUpload" accept="image/*"><br>
-  <input type="file" id="audioUpload" accept="audio/*"><br>
+  <input type="file" id="uploadImg" accept="image/*">
+  <input type="file" id="uploadAudio" accept="audio/*">
 
-  <button id="startBtn">Generate Animation</button>
+  <button id="generateBtn">Generate Animation</button>
 
-  <div id="processing">Generating animation...</div>
-  <div id="progress-bar"><div id="progress"></div></div>
-  <p id="message"></p>
+  <div id="processing">Processing…</div>
+  <div id="progressbar"><div id="bar"></div></div>
 
-  <video id="anim" controls>
-    <source src="https://raw.githubusercontent.com/domlopsrlop-cmd/dosrmlop-web/main/video.mp4" type="video/mp4">
-    Your browser does not support the video tag.
+  <video id="deepfakeVideo" controls>
+    <source src="https://raw.githubusercontent.com/domlopsrlop-cmd/dosrmlop-web/main/deepfake.mp4" type="video/mp4">
   </video>
 
   <div id="watermark">DOSRMLOP.AI</div>
 </div>
 
 <script>
-const imgUpload = document.getElementById('imgUpload');
-const audioUpload = document.getElementById('audioUpload');
-const startBtn = document.getElementById('startBtn');
-const processing = document.getElementById('processing');
-const progressBar = document.getElementById('progress-bar');
-const progress = document.getElementById('progress');
-const video = document.getElementById('anim');
-const message = document.getElementById('message');
-
-startBtn.addEventListener('click', () => {
-  if (!imgUpload.files[0]) {
-    message.textContent = "Please upload an image first!";
+document.getElementById("generateBtn").onclick = function () {
+  const img = document.getElementById("uploadImg").files.length;
+  if (!img) {
+    alert("Please upload a photo first!");
     return;
   }
 
-  processing.style.display = 'block';
-  progressBar.style.display = 'block';
-  progress.style.width = '0%';
-  message.textContent = '';
-  video.style.display = 'none';
+  document.getElementById("processing").style.display = "block";
+  document.getElementById("progressbar").style.display = "block";
+  document.getElementById("bar").style.width = "0%";
 
-  let width = 0;
+  let progress = 0;
   const interval = setInterval(() => {
-    width += 2; // fake progress
-    progress.style.width = width + '%';
-    if (width >= 100) {
+    progress += 2;
+    document.getElementById("bar").style.width = progress + "%";
+
+    if (progress >= 100) {
       clearInterval(interval);
-      processing.style.display = 'none';
-      progressBar.style.display = 'none';
-      video.style.display = 'block';
-      video.play().catch(() => {
-        message.textContent = "Tap video to play if autoplay is blocked.";
-      });
+
+      document.getElementById("processing").style.display = "none";
+      document.getElementById("progressbar").style.display = "none";
+
+      const video = document.getElementById("deepfakeVideo");
+      video.style.display = "block";
+      video.play();
     }
-  }, 50);
-});
+  }, 40);
+};
 </script>
 
 </body>
